spacing issue

--- a/amber.css
+++ b/amber.css
@@ -69,6 +69,3 @@ body {
   outline-width: thick;
 }
 
-.space2 {
-  margin-top: 910000px;
-}
